--- a/endpoints.yml
+++ b/endpoints.yml
@@ -12,7 +12,7 @@
 # https://rasa.com/docs/rasa/custom-actions
 
 action_endpoint:
- url: "http://rasa_actions:5055/webhook"
+ url: "http://rasa-actions:5055/webhook"
 
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
@@ -21,7 +21,7 @@ action_endpoint:
 tracker_store:
     type: SQL
     dialect: "postgresql"
-    url: 'postgresql://postgres:7644@db_pgsql:5432/Rasa'
+    url: 'postgresql://postgres:7644@db-pgsql:5432/Rasa'
     # url: "postgres://db_pgsql:5432/webhook"
     #  port: <port of your redis instance, usually 6379>
     db: "Rasa"
